# riserfit

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
Data/Patagonia_2023_Riser_Data/: 060323-SantaCruz.csv  070323-SantaCruz.csv  080323-SantaCruz.csv  260223-TresLagos.csv  270223-TresLagos.csv  280223-TresLagos.csv  MatchingProfilesAndCN.csv
Tutorials/: 1_formatting_data.ipynb  2_estimating_diffusion_ages.ipynb  2_estimating_linear_diffusion_ages.ipynb  3_estimating_nonlinear_diffusion_ages.ipynb  4_diffusivities_and_morpho_ages.ipynb  5_synthetic_profiles.ipynb
Tutorials/Data/DEM/: terraces.tif
Tutorials/Data/Risers/Instances/: README.txt
Tutorials/Data/Risers/Midpoints/: midpoints_T3.csv  midpoints_T7.csv
Tutorials/Data/Risers/Profiles/T3/: README.txt
Tutorials/Data/Risers/Profiles/T7/: README.txt
docs/source/: about.rst  conf.py  index.rst  install.rst  licence.rst  riserfit.rst  tutorials.rst
riserfit/: __init__.py  dem.py  diffusion.py  inversion.py  profiles.py  riser_maths.py  statistics.py
riserfit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: basicscript.py  demscript.py  diffusionscript.py
