[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riserfit"
version = "0.0.2"
authors = [
  { name="Lennart Grimm" },
]
description = "A clone of the riserfit repo."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  'numpy',
  'scipy',
  'matplotlib',
  'pandas',
  'scikit-spatial',
  'rasterio',
  'scikit-learn',
  'typing_extensions'
]
